--- a/SAP&R/Home.html
+++ b/SAP&R/Home.html
@@ -54,7 +54,7 @@
 	  	 damaging to a person's body and relationships with friends, family members and coworkers, the constant need for a substance often overcomes <br />
 	  	 any rational thinking.
         </p>
-	  	<h3>Understanding Overdoses</h4>
+	  	<h3>Understanding Overdoses</h3>
 	  		<p>
 			Most people who struggle with drug addiction face the issue of tolerance buildup. After continuous use, the body becomes less and less stimulated by <br />
 		    the drug. This may cause a person to begin using higher dosages to obtain the same high. Although the person may not feel as high, the damaging <br />
@@ -68,8 +68,61 @@
 		    	<li>Losing consciousness</li>
                 <li>Change in skin color</li>
 		    </ul>
-			</p>
-	  <a href="http://www.drugfreeworld.org/drugfacts/drugs/basic-facts-about-commonly-abused-drugs.html">Learn More</a>
-  </div>
+          </p>
+      <h3>Prevention and Cure</h3>
+      <img src="Help.jpg" height="300" width="460">
+      <p>
+          If you are suffering from addiction. It is not too late to turn your life around. 
+      </p>
+      <h4>How Intervention Works</h4>
+      <p>
+          When a drug addict decides to stop using drugs, it will be difficult for the person. He/she will need professional help from psychiatrists and support <br />
+          from family and friends. On the time of an intervention support groups must convince the person to consider rehabilitation. The person should be <br />
+          elightened with the harmful effects of drugs and the damage that it causes.  
+      </p>
+      <h4>Withdrawal and Detoxification</h4>
+      <p>
+          Withdrawal is the state where the body adjusts to the drug-free state and purges itself of the remaining drugs in the body system. Detoxification on <br /> 
+          the other hand, is the process of removing toxing substances from the body. At the start of detoxification it will be an intense time for the person. <br />
+          For example, after several hours of the last dose of heroin, people suffering from opioid addiction will experience some of the withdrawal symptoms:  
+        <ul>
+          <li>Sweating</li>
+          <li>Drowziness</li>
+          <li>Depression</li>
+          <li>Agitation</li>
+          <li>Insomnia</li>
+          <li>Runny nose</li>
+        </ul>
+      </p>
+	  <h4>Rehabilitation and Addiction Treatment Options</h4>
+	  <p>An addiction specialist, doctor, or counselor can help an individual find the correct rehabilitation or treatment procedure. The process is determined by <br />
+	     individual needs, so some people can benefit from outpatient programs while some thrive in inpatient programs.
+		 <br/>
+		 The ulitmate goal is to help the patient adapt and recover into a drug-free life as easy as possible. The most common treatment procedures include:
+		 <ul>
+		 <li>Support groups</li>
+		 <li>Psychotherapy</li>
+		 <li>Counseling</li>
+	  </p>
+	 </div>
+	  <p>
+	    Here are some of the trusted rehabilitation center in the Baguio City: <br /> <br />
+		Serenity in the Steps <br />
+	    Contact Number: 0917 518 5949 <br />
+		Website:<a href="http://www.drugrehabphilippines.org/">www.drugrehabphilippines.org</a> <br />
+		<br />
+		Roseville Rehabilitation Complex <br />
+		Contact Number: 442 6396 or  619 9919 <br />
+		Website:<a href="http://rosevillebaguio.com/">www.rosevillebaguio.com</a> <br />
+		<br/>
+		KAYA Rehabilitation <br/>
+		Contact Number: 0917 359 9755 <br />
+		Website:<a href="http://www.kayarehab.com/">http://www.kayarehab.com/</a> <br />
+		<br />
+		AT3 Physiotherapy Clinic <br />
+		Contact Number: 861 4484 <br />
+		Website:<a href="https://www.facebook.com/PhysicalTherapyQC/">www.facebook.com/PhysicalTherapy</a> <br />
+	  </p>
+  
 </body>
 </html>
