--- a/SAP&R/Home.html
+++ b/SAP&R/Home.html
@@ -106,7 +106,7 @@
 	  </p>
 	 </div>
 	  <p>
-	    Here are some of the trusted rehabilitation center in the Baguio City: <br /> <br />
+	    Here are some of the trusted rehabilitation centers in the Baguio City: <br /> <br />
 		Serenity in the Steps <br />
 	    Contact Number: 0917 518 5949 <br />
 		Website:<a href="http://www.drugrehabphilippines.org/">www.drugrehabphilippines.org</a> <br />
