--- a/SAP&R/Home.html
+++ b/SAP&R/Home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Substance Abuse Protection and Rehabilitation</title>
@@ -7,8 +7,7 @@
 <body>
   <div>
   	<div id="introduction">
-	  <h1>Substance Abuse Protection and Rehabilitation</h1>
-	  <img src="Drug Addiction.jpg">
+	  <h1>Substance Abuse Protection and Rehabilitation</h1><img src="DrugAddiction.jpg" alt = "Drug Addiction">
 	  <h3>What is Substance Abuse?</h3>
 	  <p>According to World Health Organization, (<strong>WHO</strong>) Substance abuse refers to the harmful or hazardous use of psychoactive substances, including <br />
          alcohol and illicit drugs. Psychoactive substance use can lead to dependence syndrome - a cluster of behavioural, cognitive, and physiological <br />
@@ -23,7 +22,7 @@
 	  </p>
 	  <h3>Short-Term and Long-Term Effects of Substance Abuse</h3>
 	  <p>Drugs work by stimulating various parts of the human body, including certain areas of the brain. The many different types and classifications of <br />
-	  drugs produce a variety of <strong>short-term</strong> effects, but the most common ones include:
+          drugs produce a variety of <strong>short-term</strong> effects, but the most common ones include: </p> </div>
 	  <ul>
 	  	<li>Increase heart rate</li>
 	  	<li>Dizziness</li>
@@ -32,17 +31,17 @@
 		<li>High blood pressure</li>
 		<li>Tremors</li>
 	  </ul>
+      <p>
 	  In high dosages, the risk for more dangerous effects increases, and the potential for heart attack, stroke, respiratory failure and coma increase. <br />
 	  In the <strong>long-term</strong>, substance abuse may lead to mental and physical effects that will require treatment to resolve. These effects can include:
+      </p>
 	  <ul>
 	  	<li>Paranoia</li>
 	  	<li>Psychosis</li>
 	  	<li>Immune deficiency</li>
 		<li>Organ damage and failure</li>
 	  </ul>
-	  </p>
-	  <h4>Video:What is substance abuse?</h4>
-	  <video src="Drugs Pinas.mp4" controls></video>
+	  <h4>Video:What is substance abuse?</h4><video src="DrugsPinas.mp4" controls></video>
 	  <p>Credit: The 700 Club Asia</p>
 	  <div id="2">
 	  	<h3>Dependence, Abuse, and Addiction</h3>
@@ -60,7 +59,7 @@
 		    the drug. This may cause a person to begin using higher dosages to obtain the same high. Although the person may not feel as high, the damaging <br />
 		    properties of the drug cause the same amount of harm. If the body receives a level of drugs that it cannot tolerate, this leads to an overdose. While <br />
 		    some overdoses occur after continuous use, they can also happen after one single use of a drug.<br/>
-		    <strong>Signs and symptoms</strong> of drug overdose include:
+                <strong>Signs and symptoms</strong> of drug overdose include: </p>
 		    <ul>
 		    	<li>Trouble Breathing</li>
 		    	<li>Fever and sweating</li>
@@ -68,9 +67,8 @@
 		    	<li>Losing consciousness</li>
                 <li>Change in skin color</li>
 		    </ul>
-          </p>
       <h3>Prevention and Cure</h3>
-      <img src="Help.jpg" height="300" width="460">
+      <img src="Help.jpg" height="300" width="460" alt="Drug Dependency and Abuse">
       <p>
           If you are suffering from addiction. It is not too late to turn your life around. 
       </p>
@@ -84,7 +82,7 @@
       <p>
           Withdrawal is the state where the body adjusts to the drug-free state and purges itself of the remaining drugs in the body system. Detoxification on <br /> 
           the other hand, is the process of removing toxing substances from the body. At the start of detoxification it will be an intense time for the person. <br />
-          For example, after several hours of the last dose of heroin, people suffering from opioid addiction will experience some of the withdrawal symptoms:  
+          For example, after several hours of the last dose of heroin, people suffering from opioid addiction will experience some of the withdrawal symptoms: </p>
         <ul>
           <li>Sweating</li>
           <li>Drowziness</li>
@@ -93,17 +91,16 @@
           <li>Insomnia</li>
           <li>Runny nose</li>
         </ul>
-      </p>
 	  <h4>Rehabilitation and Addiction Treatment Options</h4>
 	  <p>An addiction specialist, doctor, or counselor can help an individual find the correct rehabilitation or treatment procedure. The process is determined by <br />
 	     individual needs, so some people can benefit from outpatient programs while some thrive in inpatient programs.
 		 <br/>
-		 The ulitmate goal is to help the patient adapt and recover into a drug-free life as easy as possible. The most common treatment procedures include:
+          The ulitmate goal is to help the patient adapt and recover into a drug-free life as easy as possible. The most common treatment procedures include: </p>
 		 <ul>
 		 <li>Support groups</li>
 		 <li>Psychotherapy</li>
-		 <li>Counseling</li>
-	  </p>
+		 <li>Counseling</li>  
+          </ul>
 	 </div>
 	  <p>
 	    Here are some of the trusted rehabilitation centers in the Baguio City: <br /> <br />
@@ -123,6 +120,8 @@
 		Contact Number: 861 4484 <br />
 		Website:<a href="https://www.facebook.com/PhysicalTherapyQC/">www.facebook.com/PhysicalTherapy</a> <br />
 	  </p>
-  
+    </div>
+    <a href="TopTen.html">See Top Ten Drugs in the Philippines</a>
+            
 </body>
 </html>
